fixed when hovering nav got too small

--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ body {
 }
 
 #navigation-fixed {
+	width: 960px;
 }
 
 /*** /NAVIGATION HOVER ***/
